--- a/src/layouts/account.fxml
+++ b/src/layouts/account.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -14,7 +20,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="443.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.AccountController">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="443.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.AccountController">
     <children>
         <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="77.0" prefWidth="600.0" style="-fx-background-color: #CCCCCC;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
@@ -29,13 +35,13 @@
          <children>
             <GridPane prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="297.0" minWidth="0.0" prefWidth="226.5" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="421.0" minWidth="0.0" prefWidth="73.5" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="369.5" minWidth="10.0" prefWidth="30.5" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="369.5" minWidth="9.0" prefWidth="46.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="369.5" minWidth="10.0" prefWidth="67.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="369.5" minWidth="10.0" prefWidth="68.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="369.5" minWidth="10.0" prefWidth="122.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="297.0" minWidth="0.0" prefWidth="218.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="421.0" minWidth="0.0" prefWidth="74.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="369.5" minWidth="10.0" prefWidth="27.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="369.5" minWidth="9.0" prefWidth="47.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="369.5" minWidth="10.0" prefWidth="72.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="369.5" minWidth="10.0" prefWidth="72.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="369.5" minWidth="10.0" prefWidth="97.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints maxHeight="244.0" minHeight="0.0" prefHeight="62.0" vgrow="SOMETIMES" />
@@ -91,7 +97,7 @@
                         <Font size="18.0" />
                      </font>
                   </TextField>
-                  <TextField fx:id="secondFour" onAction="#saveText" prefHeight="39.0" prefWidth="77.0" promptText="1234" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="3">
+                  <TextField fx:id="secondFour" minWidth="77.0" onAction="#saveText" prefHeight="39.0" prefWidth="77.0" promptText="1234" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="3">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -165,7 +171,7 @@
                         <Image url="@../resources/img/delivery.png" />
                      </image>
                   </ImageView>
-                  <Button id="saveAccountButton" mnemonicParsing="false" onAction="#saveText" prefHeight="52.0" prefWidth="69.0" text="Spara" GridPane.columnIndex="4" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="6">
+                  <Button id="saveAccountButton" mnemonicParsing="false" onAction="#saveButton" prefHeight="52.0" prefWidth="141.0" text="Spara" GridPane.columnIndex="4" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="6">
                      <font>
                         <Font size="18.0" />
                      </font></Button>
