--- a/src/layouts/confirmation.fxml
+++ b/src/layouts/confirmation.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
@@ -8,7 +12,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ConfirmationController">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ConfirmationController">
    <children>
       <SplitPane dividerPositions="0.5" layoutX="10.0" layoutY="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="371.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <items>
@@ -64,34 +68,43 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Label layoutX="21.0" layoutY="101.0" text="Kortnummer:" AnchorPane.leftAnchor="16.0" />
-                  <Label layoutX="21.0" layoutY="143.0" text="Namn på kort:" AnchorPane.leftAnchor="16.0" />
-                  <TextField fx:id="cardNameTF" disable="true" editable="false" layoutX="23.0" layoutY="160.0" AnchorPane.leftAnchor="16.0" />
-                  <Label layoutX="16.0" layoutY="199.0" text="Datum på kort:" AnchorPane.leftAnchor="16.0" />
-                  <Label layoutX="117.0" layoutY="199.0" text="CVC:" />
-                  <TextField fx:id="validYearTF" disable="true" editable="false" layoutX="14.0" layoutY="221.0" prefHeight="25.0" prefWidth="80.0" AnchorPane.leftAnchor="16.0" />
-                  <TextField fx:id="validMonthTF" disable="true" editable="false" layoutX="117.0" layoutY="221.0" prefHeight="25.0" prefWidth="48.0" />
-                  <Label layoutX="14.0" layoutY="326.0" text="Summa:" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="14.0">
-                     <font>
-                        <Font size="22.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="sumLabel" layoutX="91.0" layoutY="326.0" text="50kr" AnchorPane.bottomAnchor="40.0" AnchorPane.rightAnchor="50.0">
-                     <font>
-                        <Font size="22.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="14.0" layoutY="285.0" text="Antal varor:" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="14.0">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="itemsLabel" layoutX="97.0" layoutY="285.0" text="15st" AnchorPane.bottomAnchor="70.0" AnchorPane.rightAnchor="50.0">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="cardNumberTF" disable="true" editable="false" layoutX="18.0" layoutY="118.0" AnchorPane.leftAnchor="18.0" />
+                  <StackPane prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="100.0">
+                     <children>
+                        <AnchorPane fx:id="directPayment" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                           <children>
+                              <Label layoutX="21.0" layoutY="1.0" text="Kortnummer:" AnchorPane.leftAnchor="16.0" />
+                              <Label layoutX="21.0" layoutY="43.0" text="Namn på kort:" AnchorPane.leftAnchor="16.0" />
+                              <TextField fx:id="cardNameTF1" disable="true" editable="false" layoutX="23.0" layoutY="60.0" AnchorPane.leftAnchor="16.0" />
+                              <Label layoutX="16.0" layoutY="99.0" text="Datum på kort:" AnchorPane.leftAnchor="16.0" />
+                              <Label layoutX="117.0" layoutY="99.0" text="CVC:" />
+                              <TextField fx:id="validYearTF1" disable="true" editable="false" layoutX="14.0" layoutY="121.0" prefHeight="25.0" prefWidth="80.0" AnchorPane.leftAnchor="16.0" />
+                              <TextField fx:id="validMonthTF1" disable="true" editable="false" layoutX="117.0" layoutY="121.0" prefHeight="25.0" prefWidth="48.0" />
+                              <Label layoutX="14.0" layoutY="226.0" text="Summa:" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="14.0">
+                                 <font>
+                                    <Font size="22.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="sumLabel1" layoutX="91.0" layoutY="326.0" text="50kr" AnchorPane.bottomAnchor="40.0" AnchorPane.rightAnchor="50.0">
+                                 <font>
+                                    <Font size="22.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="14.0" layoutY="285.0" text="Antal varor:" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="14.0">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="itemsLabel1" layoutX="97.0" layoutY="285.0" text="15st" AnchorPane.bottomAnchor="70.0" AnchorPane.rightAnchor="50.0">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <TextField fx:id="cardNumberTF1" disable="true" editable="false" layoutX="18.0" layoutY="18.0" AnchorPane.leftAnchor="18.0" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane fx:id="fakturaPayment" prefHeight="200.0" prefWidth="200.0" />
+                     </children>
+                  </StackPane>
                </children>
             </AnchorPane>
          </items>
