--- a/src/layouts/cart_element.fxml
+++ b/src/layouts/cart_element.fxml
@@ -6,16 +6,16 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="32.0" prefWidth="316.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="32.0" prefWidth="348.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="166.5" minWidth="10.0" prefWidth="132.5" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.0" minWidth="10.0" prefWidth="33.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.0" minWidth="10.0" prefWidth="56.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="103.0" minWidth="10.0" prefWidth="62.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="103.0" minWidth="10.0" prefWidth="33.25" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="166.5" minWidth="10.0" prefWidth="144.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.0" minWidth="10.0" prefWidth="46.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.0" minWidth="10.0" prefWidth="64.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="106.0" minWidth="10.0" prefWidth="94.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -31,11 +31,6 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <Label fx:id="totalPrice" text="9999 kr" GridPane.columnIndex="3" GridPane.halignment="RIGHT">
-         <font>
-            <Font name="System Bold" size="16.0" />
-         </font>
-      </Label>
       <Label fx:id="amountTF" text="5" GridPane.halignment="RIGHT">
          <font>
             <Font name="System Bold" size="16.0" />
@@ -44,15 +39,7 @@
             <Insets right="10.0" />
          </padding>
       </Label>
-      <Button fx:id="removeButton" mnemonicParsing="false" style="-fx-background-color: red;" text="X" textFill="WHITE" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-         <GridPane.margin>
-            <Insets />
-         </GridPane.margin>
-      </Button>
-      <Label fx:id="unitLabel" alignment="CENTER" text="kr/kg" wrapText="true" GridPane.columnIndex="2" GridPane.halignment="LEFT">
+      <Label fx:id="unitLabel" alignment="CENTER" prefHeight="25.0" text="kr/förp" wrapText="true" GridPane.columnIndex="2" GridPane.halignment="LEFT">
          <font>
             <Font size="16.0" />
          </font>
@@ -65,5 +52,22 @@
             <Font size="16.0" />
          </font>
       </Label>
+      <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="4.0" GridPane.columnIndex="3">
+         <children>
+            <Label fx:id="totalPrice" text="9999 kr">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Label>
+            <Button fx:id="removeButton" minWidth="0.0" mnemonicParsing="false" prefWidth="25.0" style="-fx-background-color: red;" text="X" textFill="WHITE">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+         </children>
+         <padding>
+            <Insets right="2.0" />
+         </padding>
+      </HBox>
    </children>
 </GridPane>
