--- a/src/layouts/main_window.fxml
+++ b/src/layouts/main_window.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -21,7 +16,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="674.0" prefWidth="1004.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.IMatController">
+<AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="674.0" prefWidth="1004.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.IMatController">
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <left>
@@ -93,12 +88,12 @@
                      </font>
                   </Label>
                   <Pane fx:id="shadow3" layoutX="30.0" layoutY="30.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#shadowClicked" opacity="0.5" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: black;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                  <ToggleButton fx:id="editToggle" layoutX="269.0" layoutY="42.0" mnemonicParsing="false" onAction="#setCartEditable" text="Ändra" AnchorPane.leftAnchor="272.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="42.0" />
+                  <ToggleButton fx:id="editToggle" layoutX="236.0" layoutY="34.0" mnemonicParsing="false" onAction="#setCartEditable" prefHeight="33.0" prefWidth="84.0" text="Ändra" AnchorPane.leftAnchor="236.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="34.0" />
                </children>
             </AnchorPane>
          </right>
          <center>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <AnchorPane id="mainWindow_AP" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
                   <TextField fx:id="searchField" layoutX="-157.0" layoutY="56.0" onAction="#searchPerformed" prefHeight="64.0" prefWidth="525.0" promptText="Sök..." AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="73.0" AnchorPane.topAnchor="5.0">
                      <font>
