--- a/src/layouts/style.css
+++ b/src/layouts/style.css
@@ -16,28 +16,43 @@
     -fx-background-insets: 2;
     */
 }
+.toggle-button {
+    -fx-background-color: #72B29E;
+    -fx-background-radius: 20px;
+    -fx-font: bold 14px "Arial";
+}
+.toggle-button: selected {
+    -fx-background-color: linear-gradient(#629988, #69A391);
+    /* -fx-background-color: linear-gradient(#93EBC5, #72B29E, #93EBC5); */
+    /* -fx-effect: dropshadow(gaussian, #808080, 10, 0.2, 0, 0) */
+    -fx-border-color: #459EA8;
+    -fx-border-width: 5px;
+    -fx-border-radius: 20px;
+}
 .ImageButton{
     -fx-background-color: rgba(0,0,0,0);
 }
 .button:hover {
-    -fx-background-color: #7BFF95;
+    /* -fx-background-color: #7BFF95; */
+    -fx-background-color: #90E0C7;
     -fx-effect: dropshadow(gaussian, #808080, 10, 0.2, 0, 0);
 }
 .button:pressed {
-    -fx-background-color: linear-gradient(#7BFF95, #49E564, #7BFF95);
+    -fx-background-color: linear-gradient(#93EBC5, #72B29E, #93EBC5);
+    /* -fx-background-color: linear-gradient(#7BFF95, #49E564, #7BFF95); */
 }
 .titled-pane {
 }
 .titled-pane > .title {
-    -fx-background-color: linear-gradient(#A0FFD6, #A0FFD6);
+    -fx-background-color: linear-gradient(#A0FFD6, #93EBC5);
     -fx-font: bold 16px "Arial";
     -fx-background-radius: 2px;
     -fx-border-radius: 2px;
     -fx-background-insets: 1px;
-
 }
 .titled-pane: focused{
     -fx-font: bold 16px "Arial";
+    /* -fx-background-color: #93EBC5; */
 }
 .titled-pane > *.content {
     -fx-background-color: transparent;
