--- a/src/ListCells/product_element.fxml
+++ b/src/ListCells/product_element.fxml
@@ -117,5 +117,30 @@
             </Button>
          </children>
       </GridPane>
+      <StackPane fx:id="addedToCartOverlay" layoutX="11.0" layoutY="33.0" prefHeight="311.0" prefWidth="600.0" visible="false" AnchorPane.bottomAnchor="-10.0" AnchorPane.leftAnchor="-10.0" AnchorPane.rightAnchor="-10.0" AnchorPane.topAnchor="-11.0">
+         <children>
+            <GridPane style="-fx-background-color: #FFFFFF; -fx-background-radius: 15;">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="197.0" minWidth="10.0" prefWidth="193.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="134.0" minWidth="10.0" prefWidth="85.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="Tillagd i varukorg">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="93.0" fitWidth="92.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+                     <image>
+                        <Image url="@../resources/img/checkmark.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </GridPane>
+         </children>
+      </StackPane>
    </children>
 </AnchorPane>
