--- a/src/layouts/confirmation.fxml
+++ b/src/layouts/confirmation.fxml
@@ -5,11 +5,13 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ConfirmationController">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ConfirmationController">
    <children>
       <SplitPane dividerPositions="0.5" layoutX="10.0" layoutY="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="371.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <items>
@@ -60,7 +62,7 @@
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <Label layoutX="16.0" layoutY="66.0" text="Betalningsmetod:" AnchorPane.leftAnchor="16.0">
+                  <Label fx:id="paymentMethodLabel" layoutX="16.0" layoutY="66.0" text="Betalningsmetod:" AnchorPane.leftAnchor="16.0">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -99,7 +101,19 @@
                               <TextField fx:id="cardNumberTF1" disable="true" editable="false" layoutX="18.0" layoutY="18.0" AnchorPane.leftAnchor="18.0" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane fx:id="fakturaPayment" prefHeight="200.0" prefWidth="200.0" />
+                        <AnchorPane fx:id="fakturaPayment" prefHeight="200.0" prefWidth="200.0" visible="false">
+                           <children>
+                              <ImageView fitHeight="166.0" fitWidth="191.0" layoutX="52.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="105.0" AnchorPane.leftAnchor="51.0" AnchorPane.rightAnchor="51.0" AnchorPane.topAnchor="27.0">
+                                 <image>
+                                    <Image url="@../resources/img/invoice.png" />
+                                 </image>
+                              </ImageView>
+                              <Label alignment="CENTER" contentDisplay="CENTER" layoutX="70.0" layoutY="195.0" prefHeight="39.0" prefWidth="294.0" text="Betalas vid leverans" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                                 <font>
+                                    <Font size="19.0" />
+                                 </font>
+                              </Label>
+                           </children></AnchorPane>
                      </children>
                   </StackPane>
                </children>
